--- a/src/ds_caselaw_utils/data/court_names.yaml
+++ b/src/ds_caselaw_utils/data/court_names.yaml
@@ -449,7 +449,17 @@
       listable: true
       param: "ukiptrib"
       start_year: 2023
-
+- name: special_immigration_appeals_commission
+  display_name: ~
+  is_tribunal: true
+  courts:
+    - code: SIAC
+      name: Special Immigration Appeals Commission
+      link: https://webarchive.nationalarchives.gov.uk/ukgwa/https://siac.decisions.tribunals.gov.uk/
+      selectable: true
+      listable: true
+      param: "siac"
+      start_year: 2003
 - name: employment_appeal_tribunal
   display_name: ~
   is_tribunal: true
