--- a/src/ds_caselaw_utils/data/court_names.yaml
+++ b/src/ds_caselaw_utils/data/court_names.yaml
@@ -493,6 +493,31 @@
       listable: true
       param: "siac"
       start_year: 2003
+- name: proscribed_organisations_appeal_commission
+  display_name: ~
+  is_tribunal: true
+  courts:
+    - code: POAC
+      name: Proscribed Organisations Appeal Commission
+
+      link: https://webarchive.nationalarchives.gov.uk/ukgwa/https://siac.decisions.tribunals.gov.uk/
+      selectable: true
+      listable: true
+      param: "poac"
+      start_year: 2003
+- name: pathogens_access_appeal_commission
+  display_name: ~
+  is_tribunal: true
+  courts:
+    - code: PAAC
+      name: Pathogens Access Appeal Commission
+
+      link: https://webarchive.nationalarchives.gov.uk/ukgwa/https://siac.decisions.tribunals.gov.uk/
+      selectable: true
+      listable: true
+      param: "paac"
+      start_year: 2003
+
 - name: employment_appeal_tribunal
   display_name: ~
   is_tribunal: true
