--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,7 @@ repos:
       - id: check-xml
       - id: check-yaml
       - id: end-of-file-fixer
+        exclude: autogen/\.*
       - id: forbid-submodules
       - id: mixed-line-ending
       - id: no-commit-to-branch
@@ -82,7 +83,7 @@ repos:
     hooks:
       - id: prettier
         types_or: [yaml, json, xml, markdown, scss, javascript]
-        exclude: courts\.md
+        exclude: courts\.md|autogen/\.*
 
   - repo: https://github.com/commitizen-tools/commitizen
     rev: v4.10.0
