--- a/src/ds_caselaw_utils/data/court_names.yaml
+++ b/src/ds_caselaw_utils/data/court_names.yaml
@@ -60,6 +60,12 @@
   display_name: "High Court (England and Wales)"
   is_tribunal: false
   courts:
+    - code: EWHC
+      name: High Court
+      long_name: The High Court of Justice
+      link: https://www.judiciary.uk/courts-and-tribunals/high-court/
+      selectable: false
+      listable: false
     - code: EWHC-QBD-Admin
       grouped_name: "Administrative Court"
       name: High Court (Administrative Court)
