--- a/src/ds_caselaw_utils/data/court_names.yaml
+++ b/src/ds_caselaw_utils/data/court_names.yaml
@@ -708,6 +708,7 @@
       listable: true
     - code: FTT-PC
       name: Land Registration Division (Property Chamber)
+      long_name: First-tier Tribunal (Property Chamber)
       param: ftt/pc
       ncn_pattern: \[(\d{4})\] (UKFTT) (\d+) \((PC)\)
       ncn_examples:
