--- a/src/ds_caselaw_utils/data/court_names.yaml
+++ b/src/ds_caselaw_utils/data/court_names.yaml
@@ -728,7 +728,7 @@
   courts:
     - code: UKIST
       name: Immigration Services Tribunal
-      long_name: The Immigation Services Tribunal
+      long_name: The Immigration Services Tribunal
       param: ukist
       link: https://webarchive.nationalarchives.gov.uk/ukgwa/https://immigrationservices.decisions.tribunals.gov.uk/Aspx/default.aspx
       start_year: 2001
